force-app/main/default/objects/Security_Health_Check__c.object
<CustomObject>
    <description>Stores the Setup &gt; Health Check risk data for a given day for an org.</description>
    <fields>
        <fullName>All_Risks_Loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Risks Loaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <formula>IF( Score__c &gt; Previous_Score__c, &quot;BETTER&quot;,
(
IF (Score__c &lt; Previous_Score__c, &quot;WORSE&quot;, &quot;SAME&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomBaselineId__c</fullName>
        <label>CustomBaselineId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurableId__c</fullName>
        <label>DurableId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Identifier__c</fullName>
        <label>Org Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Score__c</fullName>
        <label>Previous Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Health_Check_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Health Check Org</label>
        <referenceTo>Security_Health_Check_Org__c</referenceTo>
        <relationshipLabel>Security Health Checks</relationshipLabel>
        <relationshipName>Security_Health_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This</fullName>
                    <default>true</default>
                    <label>This</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Health Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Check_Date__c</columns>
        <columns>Source__c</columns>
        <columns>Org_Identifier__c</columns>
        <columns>Org_Name__c</columns>
        <columns>Security_Health_Check_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SHC-{0000}</displayFormat>
        <label>Security Health Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>